Revision history for Perl extension AnyEvent.

	- speed up AnyEvent::Socket::format_address and ::format_ipv6.

5.24  Tue Jan  5 11:39:43 CET 2010
	- cygwin never reports errors from failed connects. 1.5 just gives
          you continous readyness and EAGAIN, 1.7 is even more broken and
          just hangs. work around both issues in a cygwin-specific hack.
	- improve idle watcher documentation slightly.

5.23  Sun Dec 20 23:48:00 CET 2009
	- support IDNs in resolve_sockaddr, and therefore in tcp_connect.
        - implement punycode_encode/decode, idn_nameprep,
          idn_to_ascii and idn_to_unicode operations in AnyEvent::Util.
	- provide $AE::VERSION.
        - removed traces of "no strict 'refs'".

5.22  Sat Dec  5 03:51:13 CET 2009
	- downgrade-or-fail in AnyEvent::Handle::push_write, to
          diagnose encoding failures earlier and more succinctly.
          (this works around bugs in perl, throwing away encoding info
          when passing scalar data to extensions).
        - add more examples to AnyEvent::Socket manpage.
        - upgrade internal warning set to the same as common::sense 2.03.
        - use pack "n/a*" for pre-5.8.9 perl compatibility in AnyEvent::DNS
          (John Beppu).
        - AnyEvent::Socket::inet_aton now properly supports ipv6, as documented.
        - add google public dns servers to fallback server set and make sure
          we load-balance properly between the three sets. also add all
          fallback dns servers, not just a random one, to each dns config.

5.21  Thu Nov 19 02:48:47 CET 2009
	- fix a problem where socket constants were called with parameters
          (spotted by David Friedland).
        - fork_call never use'd POSIX (reported by Daisuke Maki).
        - improve perl 5.6 compatibility further (but it still won't work
          unless you rip out everything but the core).
        - prefer Net::DNS::Resolver over ipconfig, if installed, on win32.